<resources>
    <string name="app_name">F8D</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- For Home Menu -->
    <string name="welcome">Merhaba.</string>
    <string name="f8d">F8D\' e Hoş Geldin</string>
    <string name="f8d_cart">F8D Sepetindesin</string>
    <string name="f8d_detail">F8D Ürün Detayındasın</string>
    <string name="query_hint">Arama Yap</string>

    <!-- For Detail Menu -->
    <string name="order_title">Izgara Somon</string>
    <string name="order_desc">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."</string>
    <string name="order_total_price">0</string>
    <string name="order_price">0</string>
    <string name="order_submit">Sepete Ekle</string>
    <string name="order_minus">-</string>
    <string name="order_plus">+</string>
    <string name="order_counter">0</string>

    <!-- For Cart Item -->
    <string name="cart_submit">Sepeti Onayla</string>
    <string name="cart_total_price">Toplam:</string>
    <string name="cart_total_count">0</string>

    <!-- For Home Card Item -->
    <string name="home_tittle">Izgara Somon</string>
    <string name="home_price">0</string>

    <!-- For Cart Card Item -->
    <string name="cart_title">Izgara Somon</string>
    <string name="cart_price">0</string>
    <string name="cart_count">0</string>
    <string name="cart_total">0</string>

    <!-- For Menu Item -->
    <string name="home">Ana Sayfa</string>
    <string name="cart">Sepet</string>
    <string name="packet">Paketlerim</string>
</resources>